src/carlos/parser/SaludosParser.java
// Generated from Saludos.g4 by ANTLR 4.9.1
package carlos.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SaludosParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CommentLine=1, CommentSection=2, CA=3, CC=4, PAR_A=5, PAR_C=6, COMILLA=7, 
		IG=8, POR=9, DIV=10, MAS=11, MENOS=12, MAYI=13, MENI=14, DI=15, MAY=16, 
		MEN=17, OR=18, AND=19, TIPO=20, TIPO_ENTERO=21, TIPO_FLOTANTE=22, PRINT=23, 
		SI=24, SINO=25, MIENTRAS=26, TRUE=27, FALSE=28, STRING=29, CLASE=30, AIDI=31, 
		INT=32, PYC=33, SALTO=34;
	public static final int
		RULE_imprimir = 0, RULE_bloque = 1, RULE_cor_abierto = 2, RULE_cor_cerrado = 3, 
		RULE_instrucciones = 4, RULE_impresion = 5, RULE_string = 6, RULE_declarar = 7, 
		RULE_asignacion = 8, RULE_ifelse = 9, RULE_condicion = 10, RULE_bloque_if = 11, 
		RULE_mientras = 12, RULE_operacion = 13, RULE_expr = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"imprimir", "bloque", "cor_abierto", "cor_cerrado", "instrucciones", 
			"impresion", "string", "declarar", "asignacion", "ifelse", "condicion", 
			"bloque_if", "mientras", "operacion", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'['", "']'", "'('", "')'", "'''", "'='", "'*'", "'/'", 
			"'+'", "'-'", "'>='", "'<='", "'!='", "'>'", "'<'", "'O'", "'Y'", null, 
			"'entero'", "'flotante'", "'imprime'", "'SI'", "'SINO'", "'mientras'", 
			"'TRUE'", "'FALSE'", null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CommentLine", "CommentSection", "CA", "CC", "PAR_A", "PAR_C", 
			"COMILLA", "IG", "POR", "DIV", "MAS", "MENOS", "MAYI", "MENI", "DI", 
			"MAY", "MEN", "OR", "AND", "TIPO", "TIPO_ENTERO", "TIPO_FLOTANTE", "PRINT", 
			"SI", "SINO", "MIENTRAS", "TRUE", "FALSE", "STRING", "CLASE", "AIDI", 
			"INT", "PYC", "SALTO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Saludos.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SaludosParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ImprimirContext extends ParserRuleContext {
		public List<TerminalNode> COMILLA() { return getTokens(SaludosParser.COMILLA); }
		public TerminalNode COMILLA(int i) {
			return getToken(SaludosParser.COMILLA, i);
		}
		public TerminalNode CLASE() { return getToken(SaludosParser.CLASE, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitImprimir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_imprimir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(COMILLA);
			setState(31);
			match(CLASE);
			setState(32);
			match(COMILLA);
			setState(33);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public Cor_abiertoContext cor_abierto() {
			return getRuleContext(Cor_abiertoContext.class,0);
		}
		public Cor_cerradoContext cor_cerrado() {
			return getRuleContext(Cor_cerradoContext.class,0);
		}
		public List<InstruccionesContext> instrucciones() {
			return getRuleContexts(InstruccionesContext.class);
		}
		public InstruccionesContext instrucciones(int i) {
			return getRuleContext(InstruccionesContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloque);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			cor_abierto();
			setState(39);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(36);
					instrucciones();
					}
					} 
				}
				setState(41);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(42);
			cor_cerrado();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cor_abiertoContext extends ParserRuleContext {
		public TerminalNode CA() { return getToken(SaludosParser.CA, 0); }
		public Cor_abiertoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cor_abierto; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitCor_abierto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cor_abiertoContext cor_abierto() throws RecognitionException {
		Cor_abiertoContext _localctx = new Cor_abiertoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cor_abierto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(CA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cor_cerradoContext extends ParserRuleContext {
		public TerminalNode CC() { return getToken(SaludosParser.CC, 0); }
		public Cor_cerradoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cor_cerrado; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitCor_cerrado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cor_cerradoContext cor_cerrado() throws RecognitionException {
		Cor_cerradoContext _localctx = new Cor_cerradoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cor_cerrado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(CC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public ImpresionContext impresion() {
			return getRuleContext(ImpresionContext.class,0);
		}
		public DeclararContext declarar() {
			return getRuleContext(DeclararContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_instrucciones);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				impresion();
				}
				break;
			case TIPO:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				declarar();
				}
				break;
			case AIDI:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				asignacion();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				ifelse();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				mientras();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpresionContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(SaludosParser.PRINT, 0); }
		public TerminalNode PAR_A() { return getToken(SaludosParser.PAR_A, 0); }
		public TerminalNode PAR_C() { return getToken(SaludosParser.PAR_C, 0); }
		public TerminalNode PYC() { return getToken(SaludosParser.PYC, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public ImpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impresion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitImpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpresionContext impresion() throws RecognitionException {
		ImpresionContext _localctx = new ImpresionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_impresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(PRINT);
			setState(56);
			match(PAR_A);
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				{
				setState(57);
				string();
				}
				break;
			case PAR_A:
			case TRUE:
			case FALSE:
			case AIDI:
			case INT:
				{
				setState(58);
				operacion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(61);
			match(PAR_C);
			setState(62);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	 
		public StringContext() { }
		public void copyFrom(StringContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpresoContext extends StringContext {
		public TerminalNode STRING() { return getToken(SaludosParser.STRING, 0); }
		public ImpresoContext(StringContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitImpreso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_string);
		try {
			_localctx = new ImpresoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararContext extends ParserRuleContext {
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
	 
		public DeclararContext() { }
		public void copyFrom(DeclararContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Guardar2Context extends DeclararContext {
		public TerminalNode TIPO() { return getToken(SaludosParser.TIPO, 0); }
		public TerminalNode AIDI() { return getToken(SaludosParser.AIDI, 0); }
		public TerminalNode IG() { return getToken(SaludosParser.IG, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PYC() { return getToken(SaludosParser.PYC, 0); }
		public Guardar2Context(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitGuardar2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GuardarContext extends DeclararContext {
		public TerminalNode TIPO() { return getToken(SaludosParser.TIPO, 0); }
		public TerminalNode AIDI() { return getToken(SaludosParser.AIDI, 0); }
		public TerminalNode PYC() { return getToken(SaludosParser.PYC, 0); }
		public GuardarContext(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitGuardar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarar);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new GuardarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(66);
				match(TIPO);
				setState(67);
				match(AIDI);
				setState(68);
				match(PYC);
				}
				}
				break;
			case 2:
				_localctx = new Guardar2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(69);
				match(TIPO);
				setState(70);
				match(AIDI);
				setState(71);
				match(IG);
				setState(72);
				expr(0);
				setState(73);
				match(PYC);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	 
		public AsignacionContext() { }
		public void copyFrom(AsignacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignarContext extends AsignacionContext {
		public TerminalNode AIDI() { return getToken(SaludosParser.AIDI, 0); }
		public TerminalNode IG() { return getToken(SaludosParser.IG, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PYC() { return getToken(SaludosParser.PYC, 0); }
		public AsignarContext(AsignacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitAsignar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignacion);
		try {
			_localctx = new AsignarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(AIDI);
			setState(78);
			match(IG);
			setState(79);
			expr(0);
			setState(80);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelseContext extends ParserRuleContext {
		public List<TerminalNode> SI() { return getTokens(SaludosParser.SI); }
		public TerminalNode SI(int i) {
			return getToken(SaludosParser.SI, i);
		}
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public List<TerminalNode> SINO() { return getTokens(SaludosParser.SINO); }
		public TerminalNode SINO(int i) {
			return getToken(SaludosParser.SINO, i);
		}
		public Bloque_ifContext bloque_if() {
			return getRuleContext(Bloque_ifContext.class,0);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitIfelse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifelse);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(SI);
			setState(83);
			condicion();
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(84);
					match(SINO);
					setState(85);
					match(SI);
					setState(86);
					condicion();
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SINO) {
				{
				setState(92);
				match(SINO);
				setState(93);
				bloque_if();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public TerminalNode PAR_A() { return getToken(SaludosParser.PAR_A, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PAR_C() { return getToken(SaludosParser.PAR_C, 0); }
		public Bloque_ifContext bloque_if() {
			return getRuleContext(Bloque_ifContext.class,0);
		}
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitCondicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		CondicionContext _localctx = new CondicionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(PAR_A);
			setState(97);
			expr(0);
			setState(98);
			match(PAR_C);
			setState(99);
			bloque_if();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bloque_ifContext extends ParserRuleContext {
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Bloque_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_if; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitBloque_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_ifContext bloque_if() throws RecognitionException {
		Bloque_ifContext _localctx = new Bloque_ifContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bloque_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(SaludosParser.MIENTRAS, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitMientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(MIENTRAS);
			setState(104);
			condicion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
	 
		public OperacionContext() { }
		public void copyFrom(OperacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprmirResuContext extends OperacionContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImprmirResuContext(OperacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaludosVisitor ) return ((SaludosVisitor<? extends T>)visitor).visitImprmirResu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_operacion);
		try {
			_localctx = new ImprmirResuContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
